[package]
name = "libefi-illumos"
version = "0.1.0"
edition = "2021"
description = "Idiomatic Rust bindings around libefi-sys"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
libefi-sys = "0.1.0"
thiserror = "1.0.36"
uuid = { version = "1.2.2", features = [ "v4" ] }
